sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:15: error: not found: value j
      j = len-2-i ;
      ^AlgCocktailSort1:16: error: not found: value j
      if(!isSmaller(j, j+1)){
                    ^AlgCocktailSort1:16: error: not found: value j
      if(!isSmaller(j, j+1)){
                       ^AlgCocktailSort1:17: error: not found: value j
        swap(j,j+1);
             ^AlgCocktailSort1:17: error: not found: value j
        swap(j,j+1);
               ^